--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{mathtools,soul}
 \usepackage{microtype}
 \usepackage[shortlabels]{enumitem}
+\setlist{itemsep=0.3em,leftmargin=2.8em}
 \usepackage{booktabs}
 \usepackage{xspace}
 \usepackage{caption,subcaption}
@@ -188,6 +189,7 @@ vlined]{algorithm2e}
 \newcommand{\matB}{\mathbf{B}}
 \newcommand{\matC}{\mathbf{C}}
 \newcommand{\matM}{\mathbf{M}}
+\newcommand{\matI}{\mathbf{I}}
 
 \newcommand{\numvars}{m}
 
