--- a/aip.tex
+++ b/aip.tex
@@ -13,20 +13,11 @@
 \details[inline]{
 TO DO LIST:
 \begin{enumerate}
- \item[$\Box$] Put ``titles'' in appropriate statements.
- \pedro[inline]{
-    \begin{itemize}
-       \item Done for all definitions but $\epsilon_{p^e}$ and $\delta_{p^e}$.
-       \item Done for most theorems.
-       \item Done for most examples.
-    \end{itemize}
-    While some of these are reasonable summaries/titles, others may feel forced.
-    Feel free to delete or modify them.
- }
+ \item[$\CheckedBox$] Put ``titles'' in new statements, maybe remove some?.
  \item[$\Box$]  Describe an analog of \Cref{computing nu for large q: C}:  Explain how our proof demonstrates that $\mu(\matA,\vv{u},p^e) = \mu(\collapse{\matA}, \collapse{\vv{u}}, p^e)$ for every $p \gg 0$ and $e \geq 1$.  This follows from the fact that $\sprout_p^{\ast}(\matA,\vv{u}) = \sprout_p^{\ast}(\collapse{\matA}, \collapse{\vv{u}})$.
- \item[$\Box$] Abstract
- \item[$\Box$] Introduction
- \item[$\Box$] Section on generic hypersurfaces
+ \item[$\Box$] Update \Cref{collapse of Newton polyhedron: P} to describe collapses of faces $\mathcal{L}$ with $\rb(\O) \subseteq \rb(\mathcal{L})$.
+ \item[$\Box$] Use this to explicitly a finite set $\mathsf{W}$ of positive points in $\NN^m$ such that \[ \{\crit(A, \vv{u}) : (A, \vv{u})\text{ is very small}\} = \{ \crit(A,\vv{u}) : \vv{u} \in \mathsf{W}  \}\] for all $p \gg 0$, depending only on $A$.  The point is that we will need to invoke that crit is invariant under collapsing. 
+ \item[$\Box$]  Use this to describe $\ideala^{[\lambda]}$ when $\lambda \in [0,1]$ and $p \gg 0$.
 \end{enumerate}
 }
 
