--- a/aip.tex
+++ b/aip.tex
@@ -18,6 +18,7 @@ TO DO LIST:
  \item[$\Box$] Update \Cref{collapse of Newton polyhedron: P} to describe collapses of faces $\mathcal{L}$ with $\rb(\O) \subseteq \rb(\mathcal{L})$.
  \item[$\Box$] Explicitly describe a finite set $\mathsf{W}=\mathsf{W}(A)$ of positive points in $\NN^m$ such that \[ \{\crit(A, \vv{u}) : (A, \vv{u})\text{ is very small}\} = \{ \crit(A,\vv{u}) : \vv{u} \in \mathsf{W}  \}\] for all $p \gg 0$, depending only on $A$.  The point is that we will need to invoke that crit is invariant under collapsing. 
  \item[$\Box$]  Use this to describe $\ideala^{[\lambda]}$ when $\lambda \in [0,1]$ and $p \gg 0$.
+ \item[$\Box$]  Compute examples of the above description:  Take $\idealm^d$ and remove generators close to the axes, and then the running example.  
 \end{enumerate}
 }
 
