--- a/aip.tex
+++ b/aip.tex
@@ -18,8 +18,9 @@ TO DO LIST:
  \item[$\Box$] Update \Cref{collapse of Newton polyhedron: P} to describe collapses of faces $\mathcal{L}$ with $\rb(\O) \subseteq \rb(\mathcal{L})$.
  \item[$\Box$] Explicitly describe a finite set $\mathsf{W}=\mathsf{W}(A)$ of positive points in $\NN^m$ such that \[ \{\crit(A, \vv{u}) : (A, \vv{u})\text{ is very small}\} = \{ \crit(A,\vv{u}) : \vv{u} \in \mathsf{W}  \}\] for all $p \gg 0$, depending only on $A$.  The point is that we will need to invoke that crit is invariant under collapsing. 
  \item[$\Box$]  Use this to describe $\ideala^{[\lambda]}$ when $\lambda \in [0,1]$ and $p \gg 0$.
- \item[$\Box$]  Compute examples of the above description:  Take $\idealm^d$ and remove generators close to the axes, and then the running example. 
- \item[$\Box$]  Use our results in Frobenius Powers to show that if we fix supporting monomials then for large $p$, generic hypersurfaces (in characteristic $p$) with those supporting exponents are well-behaved and can be described explicitly
+ \item[$\Box$] Produce an example describing $\ideala^{[\lambda]}$.  Candidates include our running example, and taking $\idealm^d$, and removing generators close to the axes.
+ \item[$\Box$] A $\kk$-generic hypersurface with support $x^{\vv{a}_1}, \ldots, x^{\vv{a}_n}$ will refer to any linear combination of these monomials $g = z_1 x^{\vv{a}_1} + \cdots + z_n x^{\vv{a}_n}$, which may be thought of as an element of either $\kk[z][x]$ or $\kk(z)[x]$.  If $S$ denotes either of these rings, then Theorem 5.3/Corollary 5.7 in \sf{Frobenius Powers} implies that $\tau(f^t) = \ideala^{[t]} S$.  Thus, we have the following result:  \emph{If the supporting monomials are fixed beforehand, and $p \gg 0$, then any the test ideals of any $\kk$-generic hypersurface, where $\kk$ is a field of characteristic $p$, with those supporting exponents are well-behaved and can be described explicitly}.
+ \item[$\Box$] Reduction to prime characteristic:  Consider a field $\mathsf{L}$ of characteristic zero, and an $\mathsf{L}$-generic hypersurface $g$ with support $x^{\vv{a}_1}, \ldots, x^{\vv{a}_n}$.  If we consider the ambient ring of $g$ to be $\kk[z][x]$, then $g$ is supported by $\ZZ$, and so $g \bmod p \in (\ZZ/p\ZZ)[z][x]$ is generic, in the same sense, for all $p$ We then understand its test ideals for $p \gg 0$, and invoking \Cref{simple-special: P} will allow us to settle the big conjecture relating test ideals and multiplier ideals for generic hypersurfaces.
 \end{enumerate}
 }
 
@@ -2698,6 +2699,7 @@ where $\big(\sigma_{p^i}(\ideala,\ideald) \big)_{i=1}^{\infty}$ is a sequence of
 }
 
 \begin{proposition}[A simple special case]
+	\label{simple-special: P}
    Given a monomial matrix $\matA$, fix a universal denominator $\denom$ for all the finitely many descendants of $\matA$.
    Then there exists $\beta = \beta(\matA)$ such that whenever $p>\beta$ and $p \equiv 1 \bmod \denom$,
 \[
