Added to to-do-list

--- a/aip.tex
+++ b/aip.tex
@@ -14,6 +14,9 @@
 TO DO LIST:
 \begin{enumerate}
  \item[$\Box$] Put ``titles'' in new statements, maybe remove some?.
+ \item[$\Box$] Address request after \Cref{computing nu for large q: C}.
+ \item[$\Box$] Do the same as above, replacing $\nu$ with $\mu$.
+ \item[$\Box$] Do the same as above, replacing $\ideala$ with generic hypersurface.
  \item[$\Box$]  Describe an analog of \Cref{computing nu for large q: C}:  Explain how our proof demonstrates that $\mu(\matA,\vv{u},p^e) = \mu(\collapse{\matA}, \collapse{\vv{u}}, p^e)$ for every $p \gg 0$ and $e \geq 1$.  This follows from the fact that $\sprout_p^{\ast}(\matA,\vv{u}) = \sprout_p^{\ast}(\collapse{\matA}, \collapse{\vv{u}})$.
  \item[$\Box$] Update \Cref{collapse of Newton polyhedron: P} to describe collapses of faces $\mathcal{L}$ with $\rb(\O) \subseteq \rb(\mathcal{L})$.
  \item[$\Box$] Explicitly describe a finite set $\mathsf{W}=\mathsf{W}(A)$ of positive points in $\NN^m$ such that \[ \{\crit(A, \vv{u}) : (A, \vv{u})\text{ is very small}\} = \{ \crit(A,\vv{u}) : \vv{u} \in \mathsf{W}  \}\] for all $p \gg 0$, depending only on $A$.  The point is that we will need to invoke that crit is invariant under collapsing. 
